[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/cameras_&_ui/follow_camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/particles/muzzle_flash.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/particles/death_smoke_cpu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/particles/drift_smoke.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/vehicles/eternal_bond.gd" type="Script" id=5]
[ext_resource path="res://resources/materials/vehicles/eternal_bond.material" type="Material" id=6]
[ext_resource path="res://resources/materials/vehicles/eb_wheel.material" type="Material" id=7]
[ext_resource path="res://resources/meshes/vehicles/eternal_bond_back.tres" type="ArrayMesh" id=8]
[ext_resource path="res://resources/meshes/vehicles/wheel_1.tres" type="ArrayMesh" id=9]
[ext_resource path="res://resources/meshes/vehicles/eternal_bond_front.tres" type="ArrayMesh" id=10]
[ext_resource path="res://scenes/particles/drift_smoke_cpu.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/particles/muzzle_flash_cpu.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/particles/death_smoke.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/particles/rocket_flame.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/particles/rocket_flame_cpu.tscn" type="PackedScene" id=21]
[ext_resource path="res://resources/materials/destruction/death_explosion.material" type="Material" id=22]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.865, 0.64, 2.368, -0.865, 0.64, 2.368, 0.828, 1.36, -0.038, -0.828, 1.36, -0.038, 0.828, 1.36, -2.5, -0.828, 1.36, -2.5, 0.918, 0.09, 2.49, -0.918, 0.09, 2.49, 0.97, -0.002, 2.163, -0.97, -0.002, 2.163, 0.97, -0.002, -2.5, -0.97, -0.002, -2.5 )

[sub_resource type="QuadMesh" id=15]
resource_local_to_scene = true

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ExplosionMesh:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ExplosionMesh:mesh:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ExplosionMesh:material/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.321569, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ExplosionMesh:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ExplosionMesh:mesh:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.105112, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 6, 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ExplosionMesh:material/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.490196, 1 ), Color( 1, 0, 0, 0 ) ]
}

[node name="RootSpatial" type="Spatial"]
_import_path = NodePath(".")
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="Body" type="VehicleBody" parent="." groups=["combat_vehicle"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.204011, 2.5 )
collision_mask = 3
mass = 326.531
physics_material_override = SubResource( 1 )
script = ExtResource( 5 )
base_engine_force = 281.6
base_boost_type = 1
nitro_force = 0.0

[node name="WheelFrontLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.16, 1.722 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelFrontLeft"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )

[node name="WheelFrontRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.16, 1.722 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelFrontRight"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )

[node name="WheelBackLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.16, -1.632 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelBackLeft"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )

[node name="WheelBackRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.16, -1.632 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelBackRight"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )

[node name="WheelFrontLeft2" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.16, -2.98389 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelFrontLeft2"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )

[node name="WheelFrontRight2" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.16, -2.98389 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelFrontRight2"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )

[node name="WheelBackLeft2" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.16, -6.33789 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelBackLeft2"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )

[node name="WheelBackRight2" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.16, -6.33789 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelBackRight2"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Body"]
shape = SubResource( 6 )

[node name="CollisionShape2" type="CollisionShape" parent="Body"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -5 )
shape = SubResource( 6 )

[node name="CameraBase" parent="Body" instance=ExtResource( 1 )]

[node name="BodyMesh" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
portal_mode = 3
mesh = ExtResource( 10 )
material/0 = ExtResource( 6 )

[node name="BodyMesh2" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
portal_mode = 3
mesh = ExtResource( 8 )
material/0 = ExtResource( 6 )

[node name="ExplosionMesh" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76547, 0 )
visible = false
portal_mode = 3
cast_shadow = 0
mesh = SubResource( 15 )
material/0 = ExtResource( 22 )

[node name="ShotPositionLeft" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.499, 0.202, 2.498 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.499493, 0.201526, 2.49801 )
enabled = true
cast_to = Vector3( 0, 0, 70 )

[node name="CartridgeExitLeft" type="Position3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.961467, 0.663592, 1.18968 )

[node name="CartridgeExitRight" type="Position3D" parent="Body"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74227e-08, 0, -1, -0.961, 0.664, 1.19 )

[node name="MuzzleFlashLeft" parent="Body" instance=ExtResource( 2 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0.499, 0.202, 2.498 )

[node name="MuzzleFlashRight" parent="Body" instance=ExtResource( 2 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.499, 0.202, 2.498 )

[node name="CPUMuzzleFlashLeft" parent="Body" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.499, 0.202, 2.498 )

[node name="CPUMuzzleFlashRight" parent="Body" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.499, 0.202, 2.498 )

[node name="DeathParticles" parent="Body" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.826315, 1.52779 )

[node name="DeathCPUParticles" parent="Body" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.826315, 1.52779 )

[node name="DriftParticles" type="Spatial" parent="Body"]

[node name="DriftParticlesLeft" parent="Body/DriftParticles" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.16, -1.54 )

[node name="DriftParticlesRight" parent="Body/DriftParticles" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.16, -1.54 )

[node name="DriftCPUParticles" type="Spatial" parent="Body"]

[node name="DriftCPUParticlesLeft" parent="Body/DriftCPUParticles" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.16, -1.54 )

[node name="DriftCPUParticlesRight" parent="Body/DriftCPUParticles" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.16, -1.54 )

[node name="RocketParticles" type="Spatial" parent="Body"]

[node name="RocketParticlesBackLeft" parent="Body/RocketParticles" instance=ExtResource( 20 )]
transform = Transform( -0.55, 0, -1.50996e-07, 0, 0.55, 0, 8.30477e-08, 0, -1, 0.242928, 0.560859, -7.57398 )

[node name="RocketParticlesBackRight" parent="Body/RocketParticles" instance=ExtResource( 20 )]
transform = Transform( -0.55, 0, -1.50996e-07, 0, 0.55, 0, 8.30477e-08, 0, -1, -0.243, 0.561, -7.574 )

[node name="RocketCPUParticles" type="Spatial" parent="Body"]

[node name="RocketCPUParticlesBackLeft" parent="Body/RocketCPUParticles" instance=ExtResource( 21 )]
transform = Transform( -0.55, 0, -1.50996e-07, 0, 0.55, 0, 8.30477e-08, 0, -1, 0.243, 0.561, -7.574 )

[node name="RocketCPUParticlesBackRight" parent="Body/RocketCPUParticles" instance=ExtResource( 21 )]
transform = Transform( -0.55, 0, -1.50996e-07, 0, 0.55, 0, 8.30477e-08, 0, -1, -0.243, 0.561, -7.574 )

[node name="ReverseRocketParticles" type="Spatial" parent="Body"]

[node name="RocketParticlesFrontLeft" parent="Body/ReverseRocketParticles" instance=ExtResource( 20 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0.721, 0.248, 2.534 )

[node name="RocketParticlesFrontRight" parent="Body/ReverseRocketParticles" instance=ExtResource( 20 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.72132, 0.247823, 2.53404 )

[node name="ReverseRocketCPUParticles" type="Spatial" parent="Body"]

[node name="RocketCPUParticlesFrontLeft" parent="Body/ReverseRocketCPUParticles" instance=ExtResource( 21 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0.721, 0.248, 2.534 )

[node name="RocketCPUParticlesFrontRight" parent="Body/ReverseRocketCPUParticles" instance=ExtResource( 21 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.72132, 0.247823, 2.53404 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 7 )
anims/death = SubResource( 16 )

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.08
one_shot = true

[node name="StuckTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 30.0

[connection signal="timeout" from="RespawnTimer" to="Body" method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="GunTimer" to="Body" method="_on_GunTimer_timeout"]
[connection signal="timeout" from="StuckTimer" to="Body" method="_on_StuckTimer_timeout"]
